force-app/main/default/objects/CareCloud_Location__mdt/CareCloud_Location__mdt.object-meta.xml
<CustomObject>
    <label>CareCloud Location</label>
    <pluralLabel>CareCloud Locations</pluralLabel>
</CustomObject>