force-app/main/default/objects/CareCloud_Location__mdt/fields/CareCloud_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>CareCloud_Location_Id__c</fullName>
    <label>CareCloud Location Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>