force-app/main/default/objects/CareCloud_Location__mdt/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <label>Location Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>